--- a/hw2/index.html
+++ b/hw2/index.html
@@ -168,6 +168,21 @@
 <br>
 
 <div align="middle">
+	<table style="width=100%">
+	  <tr>
+		<td>
+		  <img src="images/cube.jpg" align="middle" width="400px"/>
+		  <figcaption align="middle">Simple example. We will be flipping the edge in the middle of the face.</figcaption>
+		</td>
+		<td>
+		  <img src="images/cubeflip.jpg" align="middle" width="400px"/>
+		  <figcaption align="middle">Image after edge flipping.</figcaption>
+		</td>
+	  </tr>
+	</table>
+ </div>
+
+<div align="middle">
   <table style="width=100%">
     <tr>
       <td>
@@ -195,6 +210,21 @@
 </p>
 
 <br>
+
+<div align="middle">
+	<table style="width=100%">
+	  <tr>
+		<td>
+		  <img src="images/cube.jpg" align="middle" width="400px"/>
+		  <figcaption align="middle">Simple example. We will be splitting the edge in the middle of the face.</figcaption>
+		</td>
+		<td>
+		  <img src="images/cubesplit.jpg" align="middle" width="400px"/>
+		  <figcaption align="middle">Image after edge splitting.</figcaption>
+		</td>
+	  </tr>
+	</table>
+ </div>
 
 <div align="middle">
   <table style="width=100%">
