--- a/hw2/index.html
+++ b/hw2/index.html
@@ -182,6 +182,10 @@
 	</table>
  </div>
 
+ <p>
+	Here's a more complex example:
+ </p>
+
 <div align="middle">
   <table style="width=100%">
     <tr>
@@ -225,6 +229,10 @@
 	  </tr>
 	</table>
  </div>
+
+ <p>
+	Here's a more complex example:
+ </p>
 
 <div align="middle">
   <table style="width=100%">
