fix img and add paragraph

--- a/hw3/index.html
+++ b/hw3/index.html
@@ -298,7 +298,11 @@
 </div>
 
 <p>
-	Let's do the same thing, except this time setting isAccumBounces equal to true.
+	In the 2nd bounce of light, we see that the bunny’s fur is highlighted with various grooves and textures, and there is also red light and purple ish blue light on the edges of the bunny. For the 3rd bounce of light, the bunny’s fur has highlights on the base of its neck, and on the edges of its body. Compared to rasterization, which just has one level of color filling, this rendered image has multiple layers of light that simulate how light interacts with an object, and does not leave the image looking flat.
+</p>
+
+<p>
+	Let's now do the same thing, except this time setting isAccumBounces equal to true.
 </p>
 
 <div align="middle">
