--- a/hw4/index.html
+++ b/hw4/index.html
@@ -116,7 +116,26 @@
 <h2 align="middle">Part 2: Simulation via Numerical Integration</h2>
 
 <p>
-	In this part, we simulated the cloth falling into a resting state, with two of the top corners pinned. Let's look at what happens in the simulation when we modify different parameters.
+	In this part, we simulated the cloth falling into a resting state, with two of the top corners pinned. First, let's see what our cloth looks like using the default paramaters:
+</p>
+
+<div align="middle">
+	<table style="width=100%">
+	  <tr>
+		<td>
+		  <img src="images/part2_16.png" align="middle" width="400px"/>
+		  <figcaption align="middle">pinned2.json with default parameters, right before we run the simulation. </figcaption>
+		</td>
+		<td>
+		  <img src="images/part2_17.png" align="middle" width="400px"/>
+		  <figcaption align="middle">pinned2.json with default parameters, taken at its resting state after the simulation has been run.</figcaption>
+		</td>
+	  </tr>
+	</table>
+</div>
+
+<p>
+	Let's look at what happens in the simulation when we modify different parameters.
 </p>
 
 <p>
@@ -469,7 +488,7 @@
 </div>
 
 <p>
-	Next, let's look at bump mapping in action.
+	Next, let's look at bump mapping in action. In the following images, we're using the provided texture_3.png as our texture.
 </p>
 
 <div align="middle">
@@ -494,7 +513,7 @@
 </div>
 
 <p>
-	Now, here's displacement mapping in action.
+	Now, here's displacement mapping in action. We've again used the provided texture_3.png here.
 </p>
 
 <div align="middle">
@@ -563,15 +582,19 @@
 	<table style="width=100%">
 	  <tr>
 		<td>
+			<img src="images/part5_20.png" align="middle" width="400px"/>
+			<figcaption align="middle">A display of the cloth with the mirror shader.</figcaption>
+		  </td>
+		<td>
 		  <img src="images/part5_8.png" align="middle" width="400px"/>
 		  <figcaption align="middle">Before dropping cloth onto sphere.</figcaption>
 		</td>
-		<td>
-		  <img src="images/part5_7.png" align="middle" width="400px"/>
-		  <figcaption align="middle">After dropping cloth onto sphere.</figcaption>
-		</td>
 	  </tr>
 	  <tr>
+		<td>
+			<img src="images/part5_7.png" align="middle" width="400px"/>
+			<figcaption align="middle">After dropping cloth onto sphere.</figcaption>
+		  </td>
 		<td>
 		  <img src="images/part5_9.png" align="middle" width="400px"/>
 		  <figcaption align="middle">A closer look at the mirror shader on the sphere.</figcaption>
