--- a/hw4/index.html
+++ b/hw4/index.html
@@ -158,7 +158,7 @@
 </div>
 
 <p>
-	For high ks (50000), the cloth barely has any pull, and the display of gravity on the cloth is not as apparent, as soon as it falls. There are no creases or any movement or disturbances as it hangs.
+	For high ks (50000), the cloth barely has any pull, and the display of gravity on the cloth is not as apparent, as soon as it falls. There are no creases or any movement or disturbances as it hangs. The cloth has a lot less pull than the default settings.
 </p>
 
 <div align="middle">
@@ -177,7 +177,7 @@
 </div>
 
 <p>
-	<strong>Modifying density:</strong> For low density (5), the cloth falls with limited pull of gravity, very gracefully and hangs there.
+	<strong>Modifying density:</strong> For low density (5), the cloth falls with limited pull of gravity, very gracefully and hangs there. Compared to the default image, this has a lot less pull than it.
 </p>
 
 <div align="middle">
@@ -196,7 +196,7 @@
 </div>
 
 <p>
-	For high density (30), the cloth falls with more pull of gravity, and the "u" shape is more apparent the further it falls.
+	For high density (30), the cloth falls with more pull of gravity as compared to the default settings, and the "u" shape is more apparent the further it falls.
 </p>
 
 <div align="middle">
